--- a/bin/application/MyScanip.fxml
+++ b/bin/application/MyScanip.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="570.0" prefWidth="762.0" style="-fx-background-color: #d2e0e0;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MyController">
+<AnchorPane prefHeight="570.0" prefWidth="762.0" style="-fx-background-color: #d2e0e0;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ScanIpController">
    <children>
-      <Label alignment="CENTER" layoutX="218.0" layoutY="7.0" prefHeight="50.0" prefWidth="327.0" text="My ScanIP Application" textFill="#ff6363">
+      <Label alignment="CENTER" layoutX="219.0" prefHeight="50.0" prefWidth="327.0" text="My ScanIP Application" textFill="#ff6363">
          <font>
             <Font name="System Bold" size="27.0" />
          </font>
